# Go-Tech_1-3_SSL_Anomaly_Detection

./: .markdownlint-cli2.yaml  README.md  mise.toml  pyproject.toml
.cursor/rules/: field-design-principles.mdc  markdown-code-fence-language.mdc  no-unnecessary-comments.mdc
.github/workflows/: markdownlint.yml
.kiro/specs/evaluation-framework/: brief.md
.kiro/specs/llm-feedback-structuring/: brief.md
.kiro/specs/patch-feature-store/: brief.md
.kiro/specs/primary-anomaly-detection/: brief.md
.kiro/specs/promptable-correction-layer/: brief.md
.kiro/specs/ssl-vit-feature-extraction/: brief.md
.kiro/steering/: roadmap.md
docs/: 2025-2026_survey.md  dino_mae.md  milestones.md  official.docx  official.md  plan.md  procedure_takt-sdd.md  researches.md  structured-json-versioning-design.md
docs/LeadersBoard/: product.md  structure.md  tech.md
docs/images/: This-figure-displays-the-student-teacher-architecture-of-the-DINO-model-6.ppm
docs/structured-json-versioning/: README.md  correction-layer.md  file-layout-and-samples.md  ontology.md  operations.md  versioning-model.md
scripts/: prepare-python.sh
