[project]
name = "ssl-anomaly-detection"
version = "0.1.0"
description = "工程横断ゼロショット欠陥検出 (Promptable Patch Retrieval): SSL ViT(DINOv3) + FAISS 特徴量ストア + LLM 構造化"
readme = "docs/researches.md"
# 3.12 に固定。DGX Spark 向け torch cu130 aarch64 wheel が cp312 で提供され、
# anomalib(>=3.10) / timm / faiss-cpu / vLLM いずれも 3.12 対応。
requires-python = ">=3.12,<3.13"

dependencies = [
    # --- 異常検知フレームワーク ---
    # DGX Spark は CUDA 13 / Blackwell(sm_121) なので cu130 extra を使用
    # (torch>=2.9 / torchvision>=0.24 / torchcodec>=0.9 を引き込む)。
    # DINOv3 バックボーンの timm 経由 drop-in 対応は anomalib 2.6 (PR #3627) の見込み。
    # 2.6.0 が PyPI 公開されるまでは下の [tool.uv.sources].anomalib で
    # feature/dinov3 ブランチを使用する。
    "anomalib[cu130]",

    # --- 特徴抽出バックボーン (ssl-vit-feature-extraction) ---
    "timm>=1.0.20",            # vit_*_patch16_dinov3 対応は timm 1.0.20 以降

    # --- 近傍探索 / 特徴量ストア (patch-feature-store) ---
    # faiss-gpu の公式 wheel は x86-64 のみ。DGX Spark は aarch64 のため faiss-cpu を使用。
    # (GPU 近傍探索が必要になった場合は sm_121 指定でソースビルド、または cuVS を検討)
    "faiss-cpu>=1.11",
    "numpy>=2.1,<3",
    "scikit-learn>=1.4",
    "scipy>=1.13",             # Mahalanobis 距離などの一次検出用

    # --- LLM 構造化 (llm-feedback-structuring) ---
    "pydantic>=2.7",           # 運用スキーマ定義 & JSON Schema 生成
    "jsonschema>=4.21",        # 構造化 JSON のスキーマ検証
]

[project.optional-dependencies]
# ローカル LLM (DGX Spark) 呼び出しクライアント。
# vLLM 本体は aarch64/Blackwell では NVIDIA 提供コンテナ (vllm/vllm-openai:cu130-*) で運用し、
# ここでは OpenAI 互換 API / Ollama を叩くクライアント側のみを入れる。
llm = [
    "openai>=1.40",            # vLLM の OpenAI 互換エンドポイント + guided_json 用
    "ollama>=0.4",             # Ollama structured outputs 用
    "transformers>=4.44",
]

# 開発 / 実験用
dev = [
    "anomalib[dev]",           # onnx/openvino/pytest 等の開発 extra
    "jupyterlab>=4",
    "ipykernel",
    "matplotlib>=3.8",
    "ruff>=0.6",
    "pytest>=8",
]

[tool.uv]
# アプリケーション用途 (ライブラリとしてビルドしない)
package = false

# torch 系は PyPI ではなく PyTorch の CUDA 13 (cu130) index から取得する。
# cu130 は aarch64 wheel (cp312) を提供し、DGX Spark (GB10 / Blackwell sm_121) に対応。
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true            # tool.uv.sources で明示指定した package のみこの index を使う

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchcodec = { index = "pytorch-cu130" }
# 【暫定】DINOv3 対応はまだ PR 段階のため、公式リポジトリには feature/dinov3 が存在しない。
# PR 作者 (alexriedel1) の fork を参照する。
# PR がマージされ anomalib 2.6.0 が PyPI 公開されたら、この行を削除し、上の依存を
#   "anomalib[cu130]>=2.6,<3"
# に固定すること。ブランチ HEAD は uv.lock で特定コミットに固定される。
anomalib = { git = "https://github.com/alexriedel1/anomalib.git", branch = "feature/dinov3" }

[tool.ruff]
line-length = 100
target-version = "py312"
